syntax = "proto3";

package connectApp;
option go_package = "proto";

service GameDispatcher {
    rpc DispatchGame(DispatchGameRequest) returns (DispatchGameReply) {}
//    rpc ReportGameInfo(ReportGameRequest) returns (ReportGameReply) {}
}

message DispatchGameRequest {
    string accountId = 1;
    string sceneId   = 3;
}

message DispatchGameReply {
    string gameAppId = 1;
    string gameAppHost = 2;
    string gameAppPort = 3;
    string sceneId = 4;
}

message ReportGameRequest {
    string uuid = 1;
    string host = 2;
    string port = 3;
    int32  ccu  = 4;
}

message ReportGameReply {
    bool success = 1;
}
